--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+
+    <h1> titulo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, illo ea minima, amet vitae, assumenda in quas tempore maiores esse exercitationem temporibus consectetur? Veritatis deleniti consequatur provident, itaque iure voluptate.</p>
     <img src="/img/Auxiliar soporte TI.png" alt="">
     <script src="/js/script.js"> </script>
 </body>
